pkg/lang/testdata/ub/inputs/valid/default-computed.ub
inputs: {
  greeting: { type: string, default: core.format('hi'), min-length: 99 }
}
