pkg/lang/testdata/ub/inputs/invalid/default-kebab-name.ub
inputs: {
  mode: { type: string, default: count-1 }
}
